// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing addReaction function should fail due to invalid emoji (null) 1`] = `
Object {
  "message": "expected: emojis parameter to be an array with string or objects
received: null",
  "pass": false,
  "testName": "addReaction",
}
`;

exports[`testing addReaction function should fail due to invalid emoji (object) 1`] = `
Object {
  "message": "expected: emojis parameter to be an array with string or objects
received: object",
  "pass": false,
  "testName": "addReaction",
}
`;

exports[`testing addReaction function should fail due to invalid emoji (undefined) 1`] = `
Object {
  "message": "expected: emojis parameter to be an array with string or objects
received: undefined",
  "pass": false,
  "testName": "addReaction",
}
`;

exports[`testing addReaction function should fail due to invalid messageIdentifier (number) 1`] = `
Object {
  "message": "expect: message data to be null, undefined, string or an object with id or text properties
received: number",
  "pass": false,
  "testName": "addReaction",
}
`;

exports[`testing addReaction function should return a failed test due to failure in message sending 1`] = `
Object {
  "message": "can not send message to channel x",
  "pass": false,
  "testName": "addReaction",
}
`;

exports[`testing addReaction function should return a failed test with isNot = false 1`] = `
Object {
  "message": "expected: to add reactions 😀
received: no reaction was added to message",
  "pass": false,
  "testName": "addReaction",
}
`;

exports[`testing addReaction function should return a failed test with isNot = false and timeout 1`] = `
Object {
  "message": "expected: to add reactions 😀
received: 😀",
  "pass": false,
  "testName": "addReaction",
}
`;

exports[`testing addReaction function should return a failed test with isNot = true 1`] = `
Object {
  "message": "expected: not to add reactions 😀
received: 😀",
  "pass": false,
  "testName": "addReaction",
}
`;

exports[`testing addReaction function should return a passed test with isNot = false 1`] = `
Object {
  "pass": true,
  "testName": "addReaction",
}
`;

exports[`testing addReaction function should return a passed test with isNot = false 2`] = `
Object {
  "pass": true,
  "testName": "addReaction",
}
`;

exports[`testing addReaction function should return a passed test with isNot = true 1`] = `
Object {
  "pass": true,
  "testName": "addReaction",
}
`;
